# rp2040-gameboy-cartridge-firmware

./: .gitignore  BuildVersion.h.in  CMakeLists.txt  Changelog.md  GameBoyHeader.c  GameBoyHeader.h  GbBootloader.h  GbDma.c  GbDma.h  GbRtc.c  GbRtc.h  GlobalDefines.h  MyBoard.h  Readme.md  RomStorage.c  RomStorage.h  bmp-flash.scr  dma_uart.c  dma_uart.h  gameboy_bus.pio  handler_gb.h  linkerscript.ld  main.c  mbc.c  mbc.h  openocd-flash.scr  printf_retarget.c  putchar.c  rp2040-gameboy-cartridge.code-workspace  tusb_config.h  usb_descriptors.c  usb_descriptors.h  webusb.c  webusb.h  ws2812b_spi.c  ws2812b_spi.h
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
cmakeHelpers/: bin2h.cmake  executebin2h.cmake
docs/: Flash Layout.drawio  ReadDma.drawio
gb-bootloader/: CMakeLists.txt  bootloader.c  executebin2h.cmake  giraffe_4color_data.c  giraffe_4color_data.h  giraffe_4color_map.c  giraffe_4color_map.h
gb-vblankhook/: CMakeLists.txt  gbSaveGameVBlankHook.asm
libs/git-commit-tracking/: CMakeLists.txt  LICENSE  git_commit.c.in  git_commit.h  git_watcher.cmake
libs/pico-littlefs/: CMakeLists.txt  lfs_pico_hal.c  lfs_pico_hal.h  lfs_util.h
roms/: 20y.h  GbBootloader.h  merken.h  ph-t_02.h
